--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.CrowdActivity"></activity>
+        <activity android:name=".activity.CrowdActivity"/>
         <activity android:name=".activity.IntroActivity" />
+        <activity android:name=".activity.CrowdAddWindow"/>
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
