add progressbar on main activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".activity.CrowdActivity"/>
+        android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".activity.CrowdActivity" />
         <activity android:name=".activity.IntroActivity" />
-        <activity android:name=".activity.CrowdAddWindow"/>
+        <activity android:name=".activity.CrowdAddWindow" />
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
