--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".activity.GoodsAddActivity"></activity>
+        <activity android:name=".activity.GoodsAddWindow"></activity>
+        <activity android:name=".activity.GoodsActivity" />
         <activity android:name=".activity.CrowdActivity" />
         <activity android:name=".activity.IntroActivity" />
         <activity android:name=".activity.CrowdAddWindow" />
